--- a/_columns/The_Big_Picture/zh-cn/2024-10-01.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-01.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Pulls Back As Mideast Conflict Escalates; Chips Take Heat, But Defense Stocks Jump
+  Stock Market Pulls Back As Mideast Conflict Escalates; Chips Take Heat, But Defense Stocks Jump	随着中东冲突升级，股市回落;芯片升温，但国防股上涨
 date: 2024-10-01 17:37 -0700
 author: KEN SHREVE
 ---
@@ -10,58 +10,61 @@ author: KEN SHREVE
 
 
 
-Major stock indexes took a step back in the stock market Tuesday as weakness in semiconductor stocks was offset by strength in oil and gas names. The pace of selling picked up just after 10 a.m. ET on reports that Iran was preparing to launch missiles at Israel after Israel commenced a ground offensive in Lebanon.
+Major stock indexes took a step back in the stock market Tuesday as weakness in semiconductor stocks was offset by strength in oil and gas names. The pace of selling picked up just after 10 a.m. ET on reports that Iran was preparing to launch missiles at Israel after Israel commenced a ground offensive in Lebanon.  
+周二，主要股指在股市中回落了一步，因为半导体股的疲软被石油和天然气股的强势所抵消。美国东部时间上午 10 点刚过，有报道称在以色列开始对黎巴嫩发动地面攻势后，伊朗正准备向以色列发射导弹，抛售步伐加快。
 
 
 
 
-The selling intensified just before 1 p.m. ET after Israel confirmed that Iran had launched an estimated nearly 200 missiles, but many were intercepted in Jordanian airspace. Buyers started coming back into the stock market just after 1:20 p.m. ET, but selling picked up the pace again by the close.
+The selling intensified just before 1 p.m. ET after Israel confirmed that Iran had launched an estimated nearly 200 missiles, but many were intercepted in Jordanian airspace. Buyers started coming back into the stock market just after 1:20 p.m. ET, but selling picked up the pace again by the close.  
+在美国东部时间下午 1 点之前，以色列证实伊朗发射了大约近 200 枚导弹，但许多导弹在约旦领空被拦截后，抛售加剧。美国东部时间下午 1：20 之后，买家开始重返股市，但在收盘时抛售速度再次加快。
 
 
-The selling was concentrated in the Nasdaq composite, which slumped 1.5% in slightly higher volume. The Russell 2000 small-cap index lagged, also down 1.5%, but held support at its 21-day exponential moving average.
+The selling was concentrated in the Nasdaq composite, which slumped 1.5% in slightly higher volume. The Russell 2000 small-cap index lagged, also down 1.5%, but held support at its 21-day exponential moving average.  
+抛售集中在纳斯达克综合指数，该指数暴跌 1.5%，成交量略有增加。罗素 2000 小盘股指数落后，也下跌 1.5%，但守住了 21 天指数移动平均线的支撑位。
 
 
-Stock Market Today
-------------------
+Stock Market Today 今日股市
+-----------------------
 
 
-Despite the Nasdaq's downdraft, the index paid a visit to its 21-day line and held support. But higher volume resulted in a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/), the index's sixth since Aug. 28. Keep in mind, though, that only two of those declines showed declines of more than 1%. From this perspective, the Nasdaq is not in a heavy distribution phase.
+Despite the Nasdaq's downdraft, the index paid a visit to its 21-day line and held support. But higher volume resulted in a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/), the index's sixth since Aug. 28. Keep in mind, though, that only two of those declines showed declines of more than 1%. From this perspective, the Nasdaq is not in a heavy distribution phase.  
+尽管纳斯达克指数下跌，但该指数触及其 21 日线并保持支撑。但更高的成交量导致了[一个分发日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)，这是该指数自 8 月 28 日以来的第六个。但请记住，其中只有两笔下跌的跌幅超过 1%。从这个角度来看，纳斯达克指数并不处于繁重的分销阶段。
 
 
-Breadth improved on the Nasdaq by the close, but losers still beat winners by about 2-to-1.
+Breadth improved on the Nasdaq by the close, but losers still beat winners by about 2-to-1.  
+纳斯达克指数的广度收盘时有所改善，但下跌者仍以约 2 比 1 的优势击败赢家。
 
 
-Inside the Nasdaq 100, **Arm Holdings** ([ARM](https://research.investors.com/quote.aspx?symbol=ARM)) slumped nearly 5%. The chip designer unsuccessfully tried to clear a 149.93 handle buy point last week in light volume. So far this week, shares are down 6.5%. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) fell 3.7% and closed just above its 50-day moving average.
+Inside the Nasdaq 100, **Arm Holdings** ([ARM](https://research.investors.com/quote.aspx?symbol=ARM)) slumped nearly 5%. The chip designer unsuccessfully tried to clear a 149.93 handle buy point last week in light volume. So far this week, shares are down 6.5%. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) fell 3.7% and closed just above its 50-day moving average.  
+在纳斯达克 100 指数中，**Arm Holdings** （[ARM](https://research.investors.com/quote.aspx?symbol=ARM)） 暴跌近 5%。上周，这位芯片设计师试图在低成交量中清除 149.93 手柄买入点，但未成功。本周到目前为止，股价下跌了 6.5%。**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 下跌 3.7%，收于略高于其 50 天移动平均线。
 
 
-The Dow Jones Industrial Average held up relatively well, down 0.4%, despite a 2.9% drop for **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)). According to a note from Barclays, supply chain channel checks showed that [Apple possibly reduced the number of builds](https://www.investors.com/news/technology/apple-stock-aapl-iphone16-demand-ai/) for the iPhone 16 by 3 million units for the quarter ending in December. It's not the first time worries about waning iPhone demand have weighed on the stock.
+The Dow Jones Industrial Average held up relatively well, down 0.4%, despite a 2.9% drop for **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)). According to a note from Barclays, supply chain channel checks showed that [Apple possibly reduced the number of builds](https://www.investors.com/news/technology/apple-stock-aapl-iphone16-demand-ai/) for the iPhone 16 by 3 million units for the quarter ending in December. It's not the first time worries about waning iPhone demand have weighed on the stock.  
+道琼斯工业平均指数表现相对较好，下跌 0.4%，尽管**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 下跌 2.9%。根据巴克莱银行的一份说明，供应链渠道检查显示，在截至 12 月的季度中，苹果可能将 iPhone 16 的[生产数量减少了](https://www.investors.com/news/technology/apple-stock-aapl-iphone16-demand-ai/) 300 万部。这不是第一次对 iPhone 需求减弱的担忧打压该股。
 
 
-The S&P 500 fell 0.9%, but it's still holding comfortably above its 21-day line. NYSE volume fell from Monday's level. Oil and gas stocks outperformed in the stock market along with defense stocks. Breadth was better on the NYSE, with decliners beating advancers by about 4-to-3.
+The S&P 500 fell 0.9%, but it's still holding comfortably above its 21-day line. NYSE volume fell from Monday's level. Oil and gas stocks outperformed in the stock market along with defense stocks. Breadth was better on the NYSE, with decliners beating advancers by about 4-to-3.  
+标准普尔 500 指数下跌 0.9%，但仍稳居 21 日线上方。纽约证券交易所的成交量从周一的水平下降。石油和天然气股与国防股一起跑赢股市。纽约证券交易所的广度更好，下跌的股票以约 4 比 3 的比分击败上涨的股票。
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/10/MP100124_4-219x300.jpg)
 
 
-Among oil and gas stocks, **ConocoPhillips** ([COP](https://research.investors.com/quote.aspx?symbol=COP)), **Marathon Oil** ([MRO](https://research.investors.com/quote.aspx?symbol=MRO)) and **Occidental Petroleum** ([OXY](https://research.investors.com/quote.aspx?symbol=OXY)) outperformed in the S&P 500 with gains ranging from 3% to 4%. But all three stocks remain on technical downtrends.
+Among oil and gas stocks, **ConocoPhillips** ([COP](https://research.investors.com/quote.aspx?symbol=COP)), **Marathon Oil** ([MRO](https://research.investors.com/quote.aspx?symbol=MRO)) and **Occidental Petroleum** ([OXY](https://research.investors.com/quote.aspx?symbol=OXY)) outperformed in the S&P 500 with gains ranging from 3% to 4%. But all three stocks remain on technical downtrends.  
+在石油和天然气股中，**康菲**石油 （[COP）、](https://research.investors.com/quote.aspx?symbol=COP)**马拉松石油** （[MRO](https://research.investors.com/quote.aspx?symbol=MRO)） 和**西方石油** （[OXY）](https://research.investors.com/quote.aspx?symbol=OXY) 在标准普尔 500 指数中表现出色，涨幅从 3% 到 4% 不等。但这三只股票都仍处于技术性下跌趋势中。
 
 
-Defense Stocks Shine
---------------------
+Defense Stocks Shine 国防股大放异彩
+----------------------------
 
 
-In the aerospace and defense group, **Northrop Grumman** ([NOC](https://research.investors.com/quote.aspx?symbol=NOC)) jumped 3% in higher volume. It's one of the leaders in the group after the large cap broke out of a cup base in early August. Group peer **L3Harris Technologies** ([LHX](https://research.investors.com/quote.aspx?symbol=LHX)) also had a good day, up nearly 3% in strong turnover. The defense contractor cleared a base with a 245.60 entry and closed just below it. Finally, drone maker **AeroVironment** ([AVAV](https://research.investors.com/quote.aspx?symbol=AVAV)) tried to clear a 211.44 handle buy point, but gains faded by the close.
+In the aerospace and defense group, **Northrop Grumman** ([NOC](https://research.investors.com/quote.aspx?symbol=NOC)) jumped 3% in higher volume. It's one of the leaders in the group after the large cap broke out of a cup base in early August. Group peer **L3Harris Technologies** ([LHX](https://research.investors.com/quote.aspx?symbol=LHX)) also had a good day, up nearly 3% in strong turnover. The defense contractor cleared a base with a 245.60 entry and closed just below it. Finally, drone maker **AeroVironment** ([AVAV](https://research.investors.com/quote.aspx?symbol=AVAV)) tried to clear a 211.44 handle buy point, but gains faded by the close.  
+在航空航天和国防板块，**诺斯罗普·格鲁曼**公司 （[NOC](https://research.investors.com/quote.aspx?symbol=NOC)） 的销量上涨 3%。它是该集团的领先者之一，因为大盘股在 8 月初突破了杯赛基础。集团同行 **L3Harris Technologies** （[LHX）](https://research.investors.com/quote.aspx?symbol=LHX) 也表现不错，成交额强劲，增长了近 3%。国防承包商清理了一个入口为 245.60 的基地，并在其下方收盘。最后，无人机制造商 **AeroVironment** （[AVAV）](https://research.investors.com/quote.aspx?symbol=AVAV) 试图清除 211.44 手柄买入点，但收盘时涨幅消退。
 
 
-West Texas intermediate crude oil futures were trading around $70.50 a barrel, up 3.5% around 4:30 p.m. ET on supply disruption fears.
-
-
-
-
----
-
-
-**[Stay In Sync With The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
+West Texas intermediate crude oil futures were trading around $70.50 a barrel, up 3.5% around 4:30 p.m. ET on supply disruption fears.  
+由于对供应中断的担忧，西德克萨斯中质原油期货交易价格约为每桶 70.50 美元，美国东部时间下午 4：30 左右上涨 3.5%。
 
 
 
@@ -69,50 +72,73 @@ West Texas intermediate crude oil futures were trading around $70.50 a barrel, u
 ---
 
 
-After four straight declines, oil and gas producer **LandBridge** ([LB](https://research.investors.com/quote.aspx?symbol=LB)) continued to rise off its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) after making a stand at the support level Monday. LandBridge is one of the leaders in the exploration and production group after its IPO in late June. But the group ranks firmly in the bottom half of IBD's industry group rankings.
-
-
-Despite Tuesday's stock market weakness, several top-rated growth stocks showed more strength and support. **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) jumped 2% as the stock holds near highs. The stock gapped up sharply Sept. 20 after the company announced a nuclear power deal with **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) to power its data centers.
-
-
-Meanwhile, a 5% drop for **ZIM Integrated Shipping** ([ZIM](https://research.investors.com/quote.aspx?symbol=ZIM)) might not have looked good on the surface. But after a strong move off lows, ZIM closed near session highs after retesting a prior buy point of 23.82.
+**[Stay In Sync With The Market With IBD's ETF Market Strategy  
+通过 IBD 的 ETF 市场策略与市场保持同步](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
 
 
 
-**CBOE Global Markets** ([CBOE](https://research.investors.com/quote.aspx?symbol=CBOE)) rallied 2.5% and gave a buy signal as the exchange operator got support at the [10-week moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). It's the first test of the 10-week line after the stock cleared a 23-week consolidation in early August.
+
+---
 
 
-In the insurance sector, **Ryan Specialty** ([RYAN](https://research.investors.com/quote.aspx?symbol=RYAN)) gained nearly 3% in higher volume. Ryan poked above Friday's high but closed just below its all-time high of 69.03.
+After four straight declines, oil and gas producer **LandBridge** ([LB](https://research.investors.com/quote.aspx?symbol=LB)) continued to rise off its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) after making a stand at the support level Monday. LandBridge is one of the leaders in the exploration and production group after its IPO in late June. But the group ranks firmly in the bottom half of IBD's industry group rankings.  
+在连续四次下跌之后，石油和天然气生产商 **LandBridge** （[LB）](https://research.investors.com/quote.aspx?symbol=LB) 周一在支撑位站稳后继续从 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)上涨。LandBridge 在 6 月下旬首次公开募股后成为勘探和生产集团的领导者之一。但该集团稳居 IBD 行业集团排名的后半部分。
 
 
-With the stock market uptrend still intact and IBD's invested percentage at 80%-100%, it still makes sense looking for new stocks to buy. Keep position sizes small to start and only add to your strongest performers.
+Despite Tuesday's stock market weakness, several top-rated growth stocks showed more strength and support. **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) jumped 2% as the stock holds near highs. The stock gapped up sharply Sept. 20 after the company announced a nuclear power deal with **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) to power its data centers.  
+尽管周二股市疲软，但几只排名靠前的成长股显示出更多的实力和支撑。**Constellation Energy** （[CEG](https://research.investors.com/quote.aspx?symbol=CEG)） 上涨 2%，因为该股保持在高位附近。9 月 20 日，该公司宣布与**微软 （Microsoft**[）](https://research.investors.com/quote.aspx?symbol=MSFT) 达成核电协议，为其数据中心供电，此后该股跳空大幅上涨。
 
 
-If some of your winners have hit the 20% profit target from a proper buy point, there's nothing wrong with taking partial profits. As always, if a new buy doesn't go as planned, keep losses small.
+Meanwhile, a 5% drop for **ZIM Integrated Shipping** ([ZIM](https://research.investors.com/quote.aspx?symbol=ZIM)) might not have looked good on the surface. But after a strong move off lows, ZIM closed near session highs after retesting a prior buy point of 23.82.  
+与此同时，**ZIM Integrated Shipping** （[ZIM）](https://research.investors.com/quote.aspx?symbol=ZIM) 下跌 5% 从表面上看可能并不好。但在从低点强劲回升后，ZIM 在重新测试之前的买入点 23.82 后收于盘中高点附近。
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_100124.pdf).
+
+**CBOE Global Markets** ([CBOE](https://research.investors.com/quote.aspx?symbol=CBOE)) rallied 2.5% and gave a buy signal as the exchange operator got support at the [10-week moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). It's the first test of the 10-week line after the stock cleared a 23-week consolidation in early August.  
+**CBOE 全球市场** （[CBOE）](https://research.investors.com/quote.aspx?symbol=CBOE) 上涨 2.5% 并发出买入信号，因为该交易所运营商在 [10 周移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)获得支撑。这是该股在 8 月初结束 23 周盘整后对 10 周线的首次测试。
 
 
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
+In the insurance sector, **Ryan Specialty** ([RYAN](https://research.investors.com/quote.aspx?symbol=RYAN)) gained nearly 3% in higher volume. Ryan poked above Friday's high but closed just below its all-time high of 69.03.  
+在保险板块，**Ryan Specialty** （[RYAN）](https://research.investors.com/quote.aspx?symbol=RYAN) 的交易量上涨了近 3%。瑞安突破了周五的高点，但收盘价略低于其历史高点 69.03。
 
 
-**YOU MAY ALSO LIKE:**
+With the stock market uptrend still intact and IBD's invested percentage at 80%-100%, it still makes sense looking for new stocks to buy. Keep position sizes small to start and only add to your strongest performers.  
+由于股市上涨趋势仍然完好无损，IBD 的投资百分比为 80%-100%，寻找新股票购买仍然是有意义的。开始时保持较小的头寸规模，并且只增加您表现最强的头寸。
 
 
-[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+If some of your winners have hit the 20% profit target from a proper buy point, there's nothing wrong with taking partial profits. As always, if a new buy doesn't go as planned, keep losses small.  
+如果您的一些赢家从适当的买入点达到了 20% 的利润目标，那么获得部分利润并没有错。与往常一样，如果新的买入没有按计划进行，请保持较小的损失。
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_100124.pdf).  
+[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_100124.pdf)。
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
+*在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Futures Fall, Oil Jumps On Mideast Fears; Tesla Faces Huge News](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fall-crude-oil-jumps-mideast-fears-tesla-deliveries/)
+[Top Growth Stocks To Buy And Watch  
+最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+
+
+[Find The Best Long-Term Investments With IBD Long-Term Leaders  
+与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+
+
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
+查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+
+
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
+使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?src=apa1bq)
+
+
+[Futures Fall, Oil Jumps On Mideast Fears; Tesla Faces Huge News  
+期货下跌，油价因中东担忧而上涨;特斯拉面临重大新闻](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fall-crude-oil-jumps-mideast-fears-tesla-deliveries/)
 
 
 
